syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.bruno.pix";
option java_outer_classname = "KeyManager";

package br.com.bruno.pix;

service KeyManagerRegistraGrpcService {
  rpc registra(RegistraChavePixRequest) returns (RegistraChavePixResponse) {}
}

service KeyManagerRemoveGrpcService {
  rpc remove(RemoveChavePixRequest) returns (RemoveChavePixResponse) {}
}

service KeyManagerCarregaGrpcService {
  rpc carrega(CarregaChavePixRequest) returns (CarregaChavePixResponse) {}
}

service KeyManagerListaGrpcService {
  rpc lista(ListaChavePixRequest) returns (ListaChavePixResponse) {}
}

enum TipoDeChave{
  UNKNOWN_TIPO_CHAVE = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  ALEATORIA = 4;
}

enum TipoDeConta{
  UNKNOWN_TIPO_CONTA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

message RegistraChavePixRequest{
  string clienteId = 1;
  TipoDeChave tipoDeChave = 2;
  string chave = 3;
  TipoDeConta tipoDeConta = 4;
}

message RegistraChavePixResponse{
  string clienteId = 1;
  string pixId = 2;
}

message RemoveChavePixRequest{
  string clienteId = 1;
  string pixId = 2;
}

message RemoveChavePixResponse{

}

message CarregaChavePixRequest{

}

message CarregaChavePixResponse{

}

message ListaChavePixRequest{

}

message ListaChavePixResponse{

}